# rust-bot-discord

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: main.rs
