[package]
name = "bot-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serenity = "0.12"
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"